@startuml
' Utilisation de skinparam pour améliorer l'apparence
skinparam linetype ortho
skinparam backgroundColor white
skinparam roundcorner 15

' Énumérations
enum Difficulty: {
  EASY = 'easy'
  MEDIUM = 'medium'
  HARD = 'hard'
}

enum TrickType:  {
  GRABS = 'grabs'
  SPINS = 'spins'
  FLIPS = 'flips'
  SLIDES_GRINDS = 'slides grinds'
  BUTTER_TRICKS = 'butter tricks'
  ONE_FOOT_TRICKS = 'one foot tricks'
  FREESTYLE_AERIAL_TRICKS = 'freestyle aerial tricks'
}

' Entités
entity User {
  *id : int <<PK>>
  *username : varchar
  *email : varchar
  *password : varchar
  *createdAt : datetime
  isVerified : boolean
  verificationToken : varchar
  image : varchar
  tricks : Collection<Trick>
  comments : Collection<Comment>
  tricks2 : Collection<Trick> [orphanRemoval]
}

entity Trick {
  *id : int <<PK>>
  *name : varchar
  *slug : varchar
  *description : text
  *difficulty : Difficulty <<FK>>
  *tricktype : TrickType <<FK>>
  *createdAt : datetime
  updatedAt : datetime
  *user_id : int <<FK>> [SET NULL]
  comments : Collection<Comment> [CASCADE]
  images : Collection<Image> [CASCADE, orphanRemoval]
  videos : Collection<Video> [CASCADE, orphanRemoval]
}

entity Image {
  *id : int <<PK>>
  *url : varchar
  isFeatured : boolean
  *createdAt : datetime
  updatedAt : datetime
  imageFile : File
  *trick_id : int <<FK>> [CASCADE]
}

entity Video {
  *id : int <<PK>>
  *url : varchar
  skipValidation : boolean [transient]
  *createdAt : datetime
  *trick_id : int <<FK>> [CASCADE]
}

entity Comment {
  *id : int <<PK>>
  *content : text
  *createdAt : datetime
  user_id : int <<FK>> [SET NULL]
  *trick_id : int <<FK>> [CASCADE]
}

' Relations
User ||--o{ Trick : crée [SET NULL]
User ||--o{ Trick : crée [orphanRemoval]
User ||--o{ Comment : écrit [SET NULL]
Trick ||--o{ Image : contient [CASCADE, orphanRemoval]
Trick ||--o{ Video : contient [CASCADE, orphanRemoval]
Trick ||--o{ Comment : reçoit [CASCADE]
Trick }|--|| Difficulty : a comme difficulté
Trick }|--|| TrickType : a comme type

' Notes explicatives
note bottom of Image
  L'attribut imageFile est utilisé 
  pour l'upload de fichiers mais 
  n'est pas stocké en base
end note

note bottom of Video
  L'URL est formatée automatiquement 
  avant la persistance pour extraire 
  l'identifiant de la vidéo
end note

note bottom of User
  Un utilisateur peut être supprimé 
  sans supprimer ses tricks ou commentaires
end note

note bottom of Trick
  La suppression d'un trick entraîne 
  la suppression de ses images, vidéos 
  et commentaires (CASCADE)
end note
@enduml
